--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/forms": "^17.0.0",
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.0",
+    "@ngneat/hot-toast": "^7.0.0",
     "@angular/router": "^17.0.0",
     "concurrently": "^8.2.2",
     "rxjs": "~7.8.0",
