--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "server": "json-server --watch db.json -m ./node_modules/json-server-auth --port=3000",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -31,6 +32,8 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
+    "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
     "@angular/build": "^20.0.5",
     "@angular/cli": "^20.0.5",
     "@angular/compiler-cli": "^20.0.0",
